src/test/ui/associated-types/cache/project-fn-ret-contravariant.transmute.stderr
error[E0759]: `x` has lifetime `'a` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/project-fn-ret-contravariant.rs:38:8
   |
LL | fn baz<'a,'b>(x: &'a u32) -> &'static u32 {
   |                  ------- this data with lifetime `'a`...
LL |    bar(foo, x)
   |        ^^^  - ...is used and required to live as long as `'static` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
